--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,10 @@
             <artifactId>jSerialComm</artifactId>
             <version>2.10.4</version>
         </dependency>
+    	<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
     </dependencies>
 
 	<build>
