--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 hivemq.uri = tcp://broker.hivemq.com
-hivemq.topics = humidityajat, temperatureajat
+hivemq.topics = humiajat, tempajat, motiajat, vibrajat, fireajat
 
